--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-widht, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie-edge">
-        <link rel="stylesheet" href="style.css">
-        <script defer src="script.js"></script>
-        <title>Snake Game</title>
-    </head>
-    <body>
-        <h1>SNAKE GAME </h1>
-        <canvas id="snake" width="512" height="512"></canvas>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script defer src="./js/script.js"></script>
+    <title>Snake Game | Bruno Dórea</title>
+    <!-- GOOGLE ANALYTICS -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TJQ2XJZPTD"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-TJQ2XJZPTD");
+    </script>
+  </head>
+  <body>
+    <h1>SNAKE GAME</h1>
+    <canvas id="snake" width="512" height="512"></canvas>
+  </body>
 
-<!-- FOOTER -->
-    <footer id="footer">
-        <div class="container">
-        <div class="copyright">
-        &copy; Created by <strong><span>Bruno Dórea</span></strong>. Todos direitos reservados.
-        </div>
-        </div>
-    </footer>
-<!-- FOOTER -->
-
+  <!-- FOOTER -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Created by <strong><span>Bruno Dórea</span></strong
+        >. Todos direitos reservados.
+      </div>
+    </div>
+  </footer>
+  <!-- FOOTER -->
 </html>
